Fix overflow for codeblocks

--- a/assets/scss/hyde-hyde/_code.scss
+++ b/assets/scss/hyde-hyde/_code.scss
@@ -5,6 +5,7 @@ pre {
 	background-color: $code-background-color !important; //override chroma theme
 	border-radius: 6px;
 	padding: 1em;
+	overflow-x: scroll;
 	code {
 		font-size: $code-fence-font-size;
 		line-height: $root-line-height;
